add 1st gee example

--- a/07-example_finch_read.Rmd
+++ b/07-example_finch_read.Rmd
@@ -12,16 +12,19 @@ knitr::opts_chunk$set(comment     = "",
 ```
 
 ```{r, message=FALSE, error=FALSE}
-library(tidyverse)
+library(tidyverse)    # all things tidy
 library(haven)        # read in SPSS dataset
 library(furniture)    # nice table1() descriptives
 library(stargazer)    # display nice tables: summary & regression
 library(texreg)       # Convert Regression Output to LaTeX or HTML Tables
 library(psych)        # contains some useful functions, like headTail
-library(lme4)         # Linear, generalized linear, & nonlinear mixed models
 library(sjstats)      # ICC calculations
 library(effects)      # Effects for regression models
 library(optimx)       # Different optimizers to solve mlm's
+
+library(lme4)         # non-linear mixed-effects models
+
+library(haven)        # read in SPSS dataset
 ```
 
 
