--- a/08-example_hox3_popular2.Rmd
+++ b/08-example_hox3_popular2.Rmd
@@ -15,21 +15,18 @@ knitr::opts_chunk$set(comment     = "",
 ```
 
 ```{r, message=FALSE, error=FALSE}
-library(tidyverse)
+library(tidyverse)    # all things tidy
+library(broom)        # converst stats objestcs to tidy tibbles
 library(haven)        # read in SPSS dataset
 library(furniture)    # nice table1() descriptives
 library(stargazer)    # display nice tables: summary & regression
 library(texreg)       # Convert Regression Output to LaTeX or HTML Tables
-library(RColorBrewer) # nice color palettes for plots
-library(gridExtra)    # place ggplots together as one plot
 library(psych)        # contains some useful functions, like headTail
-library(car)          # Companion to Applied Regression
-library(nlme)         # non-linear mixed-effects models
-library(lme4)         # Linear, generalized linear, & nonlinear mixed models
-library(lmerTest)     # Tests on lmer objects
-library(HLMdiag)      # Diagnostic Tools for for nlme & lmer4
 library(sjstats)      # ICC calculations
-library(optimx)       # Different optimizers to solve mlm's
+
+library(lme4)         # non-linear mixed-effects models
+
+library(haven)        # read in SPSS dataset
 ```
 
 ## Background
