--- a/10-sjPlot.Rmd
+++ b/10-sjPlot.Rmd
@@ -20,16 +20,14 @@ knitr::opts_chunk$set(comment     = "",
 ```
 
 ```{r, message=FALSE, error=FALSE}
-library(tidyverse)
-library(haven)        # read in SPSS dataset
-library(furniture)    # nice table1() descriptives
-library(stargazer)    # display nice tables: summary & regression
+library(tidyverse)    # all things tidy
 library(texreg)       # Convert Regression Output to LaTeX or HTML Tables
-library(psych)        # contains some useful functions, like headTail
-library(lme4)         # Linear, generalized linear, & nonlinear mixed models
-library(sjstats)      # ICC calculations
-library(effects)      # Effects for regression models
-library(optimx)       # Different optimizers to solve mlm's
+
+library(lme4)         # Linear, generalized linear, & nonlinear mixed modelsts models
+
+library(haven)        # read in SPSS dataset
+
+library(sjPlot)       # Quick predicitive and diagnostic plots 
 ```
 
 
