--- a/12-example_hedeker4_reisby.Rmd
+++ b/12-example_hedeker4_reisby.Rmd
@@ -1,4 +1,4 @@
-# Hedeker & Gibbons: Longitudinal Example
+# Longitudinal MLM: Hedeker & Gibbons - Depression
 
 
 ```{r, echo=FALSE}
@@ -12,21 +12,20 @@ panderOptions('keep.line.breaks', TRUE)
 
 
 ```{r}
-library(tidyverse)    # dplyr, tidyr, ggplot, the pipe, ect.
-library(haven)        # read in SPSS dataset
+library(tidyverse)    # all things tidy
+library(pander)       # nice looking genderal tabulations
 library(furniture)    # nice table1() descriptives
-library(stargazer)    # display nice tables: summary & regression
 library(texreg)       # Convert Regression Output to LaTeX or HTML Tables
 library(psych)        # contains some useful functions, like headTail
-library(car)          # Companion to Applied Regression
-library(lme4)         # Linear, generalized linear, & nonlinear mixed models
-library(HLMdiag)      # Diagnostic Tools for for nlme & lmer4
-library(sjstats)      # ICC calculations
-library(sjPlot)       # Quick predicitive and diagnostic plots 
-library(optimx)       # Different optimizers to solve mlm's
-library(VIM)          # Visualization and Imputation of Missing Values 
+library(sjstats)      # ICC calculationsv
 library(effects)      # Estimated Marginal Means
+library(VIM)          # Visualization and Imputation of Missing Values 
 library(naniar)       # Summaries and Visualisations for Missing Data
+library(corrplot)     # Vizualize correlation matrix
+
+library(lme4)         # Linear, generalized linear, & nonlinear mixed models
+
+library(haven)        # read in SPSS dataset
 ```
 
 
