--- a/packages.bib
+++ b/packages.bib
@@ -20,18 +20,25 @@
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
+@Manual{R-broom,
+  title = {broom: Convert Statistical Analysis Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes},
+  year = {2018},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=broom},
+}
 @Manual{R-car,
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-2},
+  note = {R package version 3.0-1},
   url = {https://CRAN.R-project.org/package=car},
 }
 @Manual{R-carData,
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-2},
+  note = {R package version 3.0-1},
   url = {https://CRAN.R-project.org/package=carData},
 }
 @Manual{R-colorspace,
@@ -41,11 +48,18 @@
   note = {R package version 1.3-2},
   url = {https://CRAN.R-project.org/package=colorspace},
 }
+@Manual{R-corrplot,
+  title = {corrplot: Visualization of a Correlation Matrix},
+  author = {Taiyun Wei and Viliam Simko},
+  year = {2017},
+  note = {R package version 0.84},
+  url = {https://CRAN.R-project.org/package=corrplot},
+}
 @Manual{R-data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2018},
-  note = {R package version 1.11.8},
+  note = {R package version 1.11.4},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 @Manual{R-dplyr,
@@ -75,6 +89,20 @@
   year = {2018},
   note = {R package version 1.8.0},
   url = {https://CRAN.R-project.org/package=furniture},
+}
+@Manual{R-gee,
+  title = {gee: Generalized Estimation Equation Solver},
+  author = {Vincent J Carey and Thomas Lumley and Brian Ripley},
+  year = {2015},
+  note = {R package version 4.13-19},
+  url = {https://CRAN.R-project.org/package=gee},
+}
+@Manual{R-geepack,
+  title = {geepack: Generalized Estimating Equation Package},
+  author = {Søren Højsgaard and Ulrich Halekoh and Jun Yan,},
+  year = {2016},
+  note = {R package version 1.2-1},
+  url = {https://CRAN.R-project.org/package=geepack},
 }
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
@@ -111,6 +139,13 @@
   note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=HLMdiag},
 }
+@Manual{R-HSAUR,
+  title = {HSAUR: A Handbook of Statistical Analyses Using R (1st Edition)},
+  author = {Brian S. Everitt and Torsten Hothorn},
+  year = {2017},
+  note = {R package version 1.3-9},
+  url = {https://CRAN.R-project.org/package=HSAUR},
+}
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Hao Zhu},
@@ -146,6 +181,13 @@
   note = {R package version 1.2-14},
   url = {https://CRAN.R-project.org/package=Matrix},
 }
+@Manual{R-MuMIn,
+  title = {MuMIn: Multi-Model Inference},
+  author = {Kamil Barton},
+  year = {2018},
+  note = {R package version 1.42.1},
+  url = {https://CRAN.R-project.org/package=MuMIn},
+}
 @Manual{R-naniar,
   title = {naniar: Data Structures, Summaries, and Visualisations for Missing Data},
   author = {Nicholas Tierney and Di Cook and Miles McBain and Colin Fay},
@@ -161,10 +203,10 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-optimx,
-  title = {optimx: Expanded Replacement and Extension of the 'optim' Function},
+  title = {optimx: A Replacement and Extension of the optim() Function},
   author = {John C Nash and Ravi Varadhan},
-  year = {2018},
-  note = {R package version 2018-7.10},
+  year = {2014},
+  note = {R package version 2013.8.7},
   url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-pander,
@@ -214,7 +256,7 @@ Research},
   title = {sjPlot: Data Visualization for Statistics in Social Science},
   author = {Daniel Lüdecke},
   year = {2018},
-  note = {R package version 2.6.0},
+  note = {R package version 2.5.0},
   url = {https://CRAN.R-project.org/package=sjPlot},
 }
 @Manual{R-sjstats,
