add GEE examples

--- a/30_example_gee_BtheB.Rmd
+++ b/30_example_gee_BtheB.Rmd
@@ -278,7 +278,7 @@ texreg::screenreg(list(btb_lm_1, btb_lmer_RI, btb_lmer_RIAS),
 # Knit to PDF:     texreg::texreg()
 # View on Screen:  texreg::screenreg()
 
-texreg::htmlreg(list(btb_lm, btb_lmer_RI, btb_lmer_RIAS), 
+texreg::htmlreg(list(btb_lm_1, btb_lmer_RI, btb_lmer_RIAS), 
                 custom.model.names = c("OLS", "MLM-RI", "MLM-RIAS"))
 ```
 
@@ -383,18 +383,17 @@ texreg::screenreg(list(btb_lm_1,
 # Knit to PDF:     texreg::texreg()
 # View on Screen:  texreg::screenreg()
 
-texreg::htmlreg(list(btb_lm, 
-                      btb_lmer_RI, 
-                      btb_gee_in, 
-                      btb_gee_ex, 
-                      btb_gee_un),
-                  custom.model.names = c("OLS", 
-                                        "MLM-RI", 
-                                        "GEE-in", 
-                                        "GEE-ex", 
-                                        "GEE-un"))
+texreg::htmlreg(list(btb_lm_1, 
+                     btb_lmer_RI, 
+                     btb_gee_in, 
+                     btb_gee_ex, 
+                     btb_gee_un),
+                custom.model.names = c("OLS", 
+                                       "MLM-RI", 
+                                       "GEE-in", 
+                                       "GEE-ex", 
+                                       "GEE-un"))
 ```
-
 
 
 
