--- a/50_example_gee_Epilepsy.Rmd
+++ b/50_example_gee_Epilepsy.Rmd
@@ -316,7 +316,7 @@ texreg::htmlreg(list(fit_glm,
 
 > CONCLUSION:
 >
-> There is no evidence that Progabide effects the weekly rate of epileptic seizures.
+> There is no evidence that Progabide effects the weekly rate of epileptic seizures differently than placebo.
 
 
 
